# ETL-pipeline

./: README.md  lunch_env.sh
ReadDeltaLake/: build.sbt
ReadDeltaLake/.bsp/: sbt.json
ReadDeltaLake/src/main/scala/: ReadDeltaLake.scala
consumer_alert/: build.sbt
consumer_alert/src/main/scala/: consumer_alert.scala
consumer_alert/src/main/utils/: schema.sql
consumer_data/: build.sbt
consumer_data/src/main/scala/: consumer_data.scala
data_generator/: data_generator.py  premade_sentences.txt  reports.json
notification_scala/: build.sbt
notification_scala/src/main/scala/: Main.scala
producer/: build.sbt
producer/src/main/scala/: producer_project.scala
report_alert_SQL/: CMakeLists.txt  main.cpp
